fdo#79422 Fix hang problem After ReplaceAll by closing Search Dialog

Bug: 79422

Change-Id: I6f13c2e2ef05011f460e0fbefe3965c52d636b48
Author:    Seyeong Kim <seyeong.kim@canonical.com>